Fixed ios scrolling white space and scroll track

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
     --purple: #a93dc7;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: var(--lavender);
 }
 
 body::before {
@@ -341,6 +342,10 @@ header {
 }
 
 ::-webkit-scrollbar-track {
+    background-color: var(--white);
+}
+
+ul::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
